Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87253

Quick Layout causes crash if child item Layout.preferredWidth bound to the Layouts width

XMLWordPrintable

    • 4f8041b01445fd4eec0beb133719645d00d0b2ac (qt/qtdeclarative/dev) 0b5ae19f733c7d59e6138c677fe432a0e6f25938 (qt/qtdeclarative/6.0) 8b9bac7125021b57ffc2edecc8482adafcb0b398 (qt/tqtc-qtdeclarative/tqtc/lts-5.15)

      If for example RowLayout or ColumnLayout contains an item with the attached property Layout.preferredWidth bound to the layout width (e.g. Layout.preferredWidth: (parent.width - 30) / 3), the layout will keep changing it's width rapidly and the app will crash shortly.

      Steps to reproduce the issue:

      1. Run the attached project

      The example would work fine if Layout.preferredWidth is not bound to the layout width OR that the layout has width set (e.g. width: 600).

        1. qtbug87253.zip
          2 kB
          Miika Pernu
        For Gerrit Dashboard: QTBUG-87253
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes